SUBDIRS = tutorial-standalone reference modules

EXTRA_DIST = \
	runtime.html.in \
	style.css \
	conventions.html.in \
	mapping.html.in \
	sh.css \
	sh.js \
	sh_js.js

docdir = $(datadir)/doc/seed/
doc_DATA = runtime.html conventions.html mapping.html style.css sh.css sh.js sh_js.js

## File created by the gnome-build tools

