SUBDIRS = tutorial-standalone reference modules mapping

EXTRA_DIST = \
	runtime.html.in \
	style.css \
	conventions.html.in \
	sh.css \
	sh.js \
	sh_js.js

docdir = $(datadir)/doc/seed/
doc_DATA = runtime.html conventions.html style.css sh.css sh.js sh_js.js

## File created by the gnome-build tools

