SUBDIRS = \
    browser \
    clutter-shader \
    clutter-transitions \
    glib \
    opengl \
    pong \
    same-seed \
    turtle \
    twitter

repldir = $(datadir)/seed
repl_DATA = repl.js

if BUILD_SEED_EXAMPLES
examplesdir=$(datadir)/doc/seed/examples
examples_DATA = \
    accelgroup.js \
    actions.js \
    async-quine.js \
    calculator.js \
    clutter-0.8.js \
    clutter-0.9.js \
    clutter-cairo.js \
    clutter-cogl-0.8.js \
    clutter-cogl-0.9.js \
    clutter-pad.js \
    dbus-banshee.js \
    dbus-consolekit.js \
    gconf.js \
    gdkpixbufloader.js \
    Gnio.js \
    Gnio-server.js \
    gtkplug.js \
    gtktextview.js \
    gtktreeview.js \
    json-packing.js \
    json-reddit.js \
    ls.js \
    n-oscillator.js \
    notify-test.js \
    pango-fontset.js \
    pango.js \
    poppler.js \
    quine.js \
    repl.js \
    soup.js \
    threaded-repl.js \
    threaded-repl.js \
    video.js \
    vte-test.js \
    HACKING
endif

EXTRA_DIST = \
    accelgroup.js \
    actions.js \
    async-quine.js \
    calculator.js \
    clutter-0.8.js \
    clutter-0.9.js \
    clutter-cairo.js \
    clutter-cogl-0.8.js \
    clutter-cogl-0.9.js \
    clutter-pad.js \
    COPYING \
    dbus-banshee.js \
    dbus-consolekit.js \
    gconf.js \
    gdkpixbufloader.js \
    Gnio.js \
    Gnio-server.js \
    gtkplug.js \
    gtktextview.js \
    gtktreeview.js \
    json-packing.js \
    json-reddit.js \
    ls.js \
    n-oscillator.js \
    notify-test.js \
    pango-fontset.js \
    pango.js \
    poppler.js \
    quine.js \
    repl.js \
    soup.js \
    threaded-repl.js \
    video.js \
    vte-test.js \
    HACKING

