SUBDIRS = \
    browser \
    clutter-pad \
    clutter-shader \
    dbus \
    glib \
    opengl \
    turtle \
    xml \
    twitter

repldir = $(datadir)/seed
repl_SCRIPTS = repl.js

if BUILD_SEED_EXAMPLES
examplesdir=$(datadir)/doc/seed/examples
examples_DATA = \
    accelgroup.js \
    actions.js \
    async-quine.js \
    calculator.js \
    cairo.js \
    clutter-1.0.js \
    clutter-cairo-1.0.js \
    clutter-cogl-1.0.js \
    gconf.js \
    gdkpixbufloader.js \
    Gnio.js \
    Gnio-server.js \
    gtkplug.js \
    gtktextview.js \
    gtktreeview.js \
    json-packing.js \
    json-reddit.js \
    ls.js \
    n-oscillator.js \
    notify-test.js \
    pango-fontset.js \
    pango.js \
    poppler.js \
    quine.js \
    repl.js \
    soup.js \
    threaded-repl.js \
    video.js \
    vte-test.js \
    HACKING
endif

EXTRA_DIST = \
    accelgroup.js \
    actions.js \
    cairo.js \
    async-quine.js \
    calculator.js \
    clutter-1.0.js \
    clutter-cairo-1.0.js \
    clutter-cogl-1.0.js \
    COPYING \
    gconf.js \
    gdkpixbufloader.js \
    Gnio.js \
    Gnio-server.js \
    gtkplug.js \
    gtktextview.js \
    gtktreeview.js \
    json-packing.js \
    json-reddit.js \
    ls.js \
    n-oscillator.js \
    notify-test.js \
    pango-fontset.js \
    pango.js \
    poppler.js \
    quine.js \
    repl.js \
    soup.js \
    threaded-repl.js \
    video.js \
    vte-test.js \
    HACKING

