EXTRA_DIST = \
	argv.js \
    compare.js \
    gtype.js \
    json.js \
    enum.js \
    gobject-scope.js \
    include.js \
    printf.js \
    json-constructor.js \
    list-test.js \
    namespace-exception-test.js \
    print.js \
    printprint.js \
    property-benchmark.js \
    property-glib-exception.js \
    readline.js \
    run-tests.py \
    signal.js \
    syntax-test.js \
    type-conversion.js \
    gsuper.js \
    native-closure.js 


## File created by the gnome-build tools

