EXTRA_DIST = \
	argv.js \
    compare.js \
    struct-nested-set.js \
    struct-constructor.js \
    constructor-args.js \
    signal-this.js \
    struct-set-member.js \
    c-module.js \
    struct-offsets.js \
    gtype-typerror.js \
    gtype-signal.js \
    signal-userdata.js \
    gtype-signal-exception.js \
    out-test.js \
    gtype-signal2.js \
    signal-expects.js \
    gtype.js \
    json.js \
    enum.js \
    signal-exception.js \
    gerror.js \
    gobject-scope.js \
    include.js \
    printf.js \
    json-constructor.js \
    list-test.js \
    namespace-exception-test.js \
    print.js \
    printprint.js \
    property-benchmark.js \
    property-glib-exception.js \
    readline.js \
    run-tests.py \
    signal.js \
    syntax-test.js \
    type-conversion.js \
    native-closure.js \
    gdk-event.js \
    signal-connect.js \
    struct-functions.js \
    check-syntax.js \
    fork.js \
    quit.js \
    introspect.js \
    make-test.py


## File created by the gnome-build tools

