
tutorialdir=$(docdir)/tutorial
tutorial_DATA = \
	1.js \
	2.js \
	3.js \
	1.png \
	2.png \
	3.png \
	4.png \
	packing.png \
	packing.svg \
	tutorial.html
EXTRA_DIST = \
	1.js \
	2.js \
	3.js \
	1.png \
	2.png \
	3.png \
	4.png \
	packing.png \
	packing.svg \
	tutorial.html.in

	

## File created by the gnome-build tools


-include $(top_srcdir)/git.mk
