browserdir=$(datadir)/doc/seed/examples/browser
browser_DATA = \
	main.js \
	browser-actions.js \
	browser-main.js \
	browser-tab.js \
	browser-toolbar.js
EXTRA_DIST = \
	main.js \
	browser-actions.js \
	browser-main.js \
	browser-tab.js \
	browser-toolbar.js

## File created by the gnome-build tools

