browserdir=$(datadir)/doc/seed/examples/browser
browser_DATA = \
	main.js \
	browser-actions.js \
	browser-main.js \
	browser-tab.js \
	browser-toolbar.js \
	browser-menu.js \
	browser-bookmarks.js \
	browser-find.js
EXTRA_DIST = \
	main.js \
	browser-actions.js \
	browser-main.js \
	browser-tab.js \
	browser-toolbar.js
	browser-menu.js \
	browser-bookmarks.js \
	browser-find.js
## File created by the gnome-build tools

