if BUILD_SEED_EXAMPLES
browserdir = $(datadir)/doc/seed/examples/browser
browser_DATA = \
	COPYING \
	BrowserSettings.js \
	BrowserTab.js \
	BrowserToolbar.js \
	BrowserView.js \
	TabbedBrowser.js \
	main.js
endif

EXTRA_DIST = \
	COPYING \
	BrowserSettings.js \
	BrowserTab.js \
	BrowserToolbar.js \
	BrowserView.js \
	TabbedBrowser.js \
	main.js

