if BUILD_SEED_EXAMPLES
shaderdir = $(datadir)/doc/seed/examples/clutter-shader
shader_DATA = \
	bob.jpg \
	default.glsl \
	main.js \
	ShaderEditor.js \
	ShaderView.js
endif

EXTRA_DIST = \
	bob.jpg \
	default.glsl \
	main.js \
	ShaderEditor.js \
	ShaderView.js


## File created by the gnome-build tools

