if BUILD_SEED_EXAMPLES
dbusdir=$(datadir)/doc/seed/examples/dbus
dbus_DATA = \
	dbus-banshee.js \
	dbus-consolekit.js \
	dbus-networkmanager.js \
	networkManagerIfaces.js
endif

EXTRA_DIST = \
	dbus-banshee.js \
	dbus-consolekit.js \
	dbus-networkmanager.js \
	networkManagerIfaces.js


## File created by the gnome-build tools

