lightsoffdir = $(datadir)/doc/seed/examples/lightsoff
lightsoff_DATA = \
	board.js \
	light.js \
	main.js \
	tim-off.svg \
	tim-on.svg \
	0.svg \
	1.svg \
	2.svg \
	3.svg \
	4.svg \
	5.svg \
	6.svg \
	7.svg \
	8.svg \
	9.svg \
	back.svg \
	front.svg \
	led.svg \
	score.js \
	off.svg \
	menu.js \
	lightsoff.schemas \
	arrow-l.svg \
	arrow-r.svg
EXTRA_DIST = \
	board.js \
	light.js \
	main.js \
	tim-off.svg \
	tim-on.svg \
	0.svg \
	1.svg \
	2.svg \
	3.svg \
	4.svg \
	5.svg \
	6.svg \
	7.svg \
	8.svg \
	9.svg \
	back.svg \
	front.svg \
	led.svg \
	score.js \
	off.svg \
	menu.js \
	lightsoff.schemas \
	arrow-l.svg \
	arrow-r.svg
## File created by the gnome-build tools

schemadir   = @GCONF_SCHEMA_FILE_DIR@
schema_DATA = lightsoff.schemas

install-data-local:
	GCONF_CONFIG_SOURCE="" gconftool-2 --makefile-install-rule $(schema_DATA)
