lightsoffdir = $(datadir)/doc/seed/examples/lightsoff
lightsoff_DATA = \
	board.js \
	light.js \
	main.js \
	light-off.svg \
	light-on.svg \
	0.svg \
	1.svg \
	2.svg \
	3.svg \
	4.svg \
	5.svg \
	6.svg \
	7.svg \
	8.svg \
	9.svg \
	lcd-back.svg \
	lcd-front.svg \
	score.js \
	lcd-off.svg \
	menu.js \
	lightsoff.schemas \
	arrow-l.svg \
	arrow-r.svg \
	arrow.js
EXTRA_DIST = \
	board.js \
	light.js \
	main.js \
	light-off.svg \
	light-on.svg \
	0.svg \
	1.svg \
	2.svg \
	3.svg \
	4.svg \
	5.svg \
	6.svg \
	7.svg \
	8.svg \
	9.svg \
	lcd-back.svg \
	lcd-front.svg \
	score.js \
	lcd-off.svg \
	menu.js \
	lightsoff.schemas \
	arrow-l.svg \
	arrow-r.svg \
	arrow.js
## File created by the gnome-build tools

schemadir   = @GCONF_SCHEMA_FILE_DIR@
schema_DATA = lightsoff.schemas

install-data-local:
	gconftool-2 --install-schema-file=$(schema_DATA)
