if BUILD_SEED_EXAMPLES
pongdir=$(datadir)/doc/seed/examples/pong
pong_DATA = \
    ball.png \
    midline.png \
    player2.png \
    player.png \
    pong.js
endif

EXTRA_DIST = \
    ball.png \
    midline.png \
    player2.png \
    player.png \
    pong.js

## File created by the gnome-build tools

