if BUILD_SEED_EXAMPLES
samedir=$(datadir)/doc/seed/examples/same-seed
same_DATA = \
    bkg.svg \
    blue.svg \
    board.js \
    green.svg \
    light.js \
    main.js \
    red.svg \
    same-seed.ui \
    score.js \
    yellow.svg
endif

EXTRA_DIST = \
    bkg.svg \
    blue.svg \
    board.js \
    green.svg \
    light.js \
    main.js \
    red.svg \
    same-seed.ui \
    score.js \
    yellow.svg

## File created by the gnome-build tools

